--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2022 Copyright:
-    <a class="text-white" href="home.html">PlantsClub</a>
+    <a class="text-white" href="index.html">PlantsClub</a>
   </div>
   <!-- Copyright -->
 </footer>
