--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <div class="main">
             <p>Hii, I'm Raghav Garg</p>
         </div>
-        <p>I'm a sophomore at the HCST, Mathura, India pursuing Bachelor of Technology in Computer Science and Engineering. I am currently learning Web Development and this is my first project using HTML,CSS and Bootstrap.</p>
+        <p>I'm a full stack web developer (MEAN stack developer) and this is my first basic project using HTML,CSS and Bootstrap.</p>
         <p>I'm proficient in Competitive Programming , Problem Solving. I'm truely passionate about my work and always eager to connect with other fellow learners.</p>
         <p><b>Codechef Max Rating (1659) 3-star</b></p>
         <div class="email">
