--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="text">
             <h4>Torino Wide Rectangular Planters</h4> 
             <p>Plant a <b>20</b>inch with base plot home plants- indoor plants</p>
-            <button type="button" class="btn btn-warning"><s>Book Now</s>&nbsp Out of stock</button>
+            <button type="button" class="btn btn-warning"><s><b>Book Now</b></s>&nbsp Out of stock</button>
           </div>
         </article>
         <article>
@@ -446,9 +446,9 @@
     </section>
 
     <div>
-      <button type="button" class="btn btn-outline-light"><a href="" style="text-decoration: none; color: white;">About Us</a></button>
+      <button type="button" class="btn btn-outline-success"><a href="https://github.com/grraghav120/PlantsClub.github.io" style="text-decoration: none; color: white;">Contribute</a></button>
       <button type="button" class="btn btn-outline-light"><a href="contact.html" style="text-decoration: none; color: white;">Contact Me</a></button>
-      <button type="button" class="btn btn-outline-light"><a href="" style="text-decoration: none; color: white;">Blogs</a></button>
+      <button type="button" class="btn btn-outline-light"><a href="signup.html" style="text-decoration: none; color: white;">Sign Up</a></button>
       
     </div>
     
@@ -461,6 +461,9 @@
     © 2022 Copyright:
     <a class="text-white" href="index.html">PlantsClub</a>
   </div>
+  <div class="star">
+        Made with ❤ <a href="https://github.com/grraghav120/PlantsClub.github.io">Give our repo a star.</a>
+    </div>
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
