--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <button class="btn btn-outline-info btn1" type="submit" onclick="window.location.href='signup.html'">
                   SignUp
                 </button>
-                <button type="button" class="btn btn-outline-info">Cart</button>
+                <button type="button" class="btn btn-outline-info" onclick="window.location.href='forget.html'">Cart</button>
               <!-- </form> -->
             </div>
           </div>
