--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <a
                     class="nav-link active"
                     aria-current="page"
-                    href="home.html"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
