--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           <div class="text">
             <h4>Torino Wide Rectangular Planters</h4> 
             <p>Plant a <b>20</b>inch with base plot home plants- indoor plants</p>
-            <button type="button" class="btn btn-warning"><s><b>Book Now</b></s>&nbsp Out of stock</button>
+            <button type="button" class="btn btn-warning" disabled ><s><b>Book Now</b></s>&nbsp Out of stock</button>
           </div>
         </article>
         <article>
