--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
 
     <div>
       <button type="button" class="btn btn-outline-success"><a href="https://github.com/grraghav120/PlantsClub.github.io" style="text-decoration: none; color: white;">Contribute</a></button>
-      <button type="button" class="btn btn-outline-light"><a href="contact.html" style="text-decoration: none; color: white;">Contact Me</a></button>
-      <button type="button" class="btn btn-outline-light"><a href="signup.html" style="text-decoration: none; color: white;">Sign Up</a></button>
+      <button type="button" class="btn btn-outline-success"><a href="contact.html" style="text-decoration: none; color: white;">Contact Me</a></button>
+      <button type="button" class="btn btn-outline-success"><a href="signup.html" style="text-decoration: none; color: white;">Sign Up</a></button>
       
     </div>
     
